C/citrix-cpx-istio-sidecar-injector-ClusYd/citrix-cpx-istio-sidecar-injector.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app: cpx-sidecar-injector
  name: cpx-sidecar-injector
  namespace: default
spec:
  ingress:
    - {}
  podSelector:
    matchLabels:
      app: cpx-sidecar-injector
  policyTypes:
    - Ingress
---
apiVersion: v1
kind: Service
metadata:
  name: cpx-sidecar-injector
  namespace: ClusYd
  labels:
    istio: sidecar-injector
    app: cpx-sidecar-injector
spec:
  ports:
    - port: 443
  selector:
    istio: sidecar-injector
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cpx-sidecar-injector
  namespace: ClusYd
  labels:
    app: cpx-sidecar-injector
    istio: sidecar-injector
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cpx-sidecar-injector
      istio: sidecar-injector
  template:
    metadata:
      labels:
        istio: sidecar-injector
        app: cpx-sidecar-injector
      annotations:
        sidecar.istio.io/inject: "false"
        scheduler.alpha.kubernetes.io/critical-pod: ""
    spec:
      serviceAccountName: cpx-sidecar-injector-service-account
      containers:
        - name: sidecar-injector-webhook
          image: quay.io/citrix/cpx-istio-sidecar-injector:1.2.0
          imagePullPolicy: IfNotPresent
          args:
            - --caCertFile=/etc/istio/certs/cert.pem
            - --tlsCertFile=/etc/istio/certs/cert.pem
            - --tlsKeyFile=/etc/istio/certs/key.pem
            - --injectConfig=/etc/istio/inject/config
            - --meshConfig=/etc/istio/config/mesh
            - --healthCheckInterval=10s
            - --webhookConfigName=cpx-sidecar-injector
          volumeMounts:
            - name: config-volume
              mountPath: /etc/istio/config
              readOnly: true
            - name: certs
              mountPath: /etc/istio/certs
              readOnly: true
            - name: inject-config
              mountPath: /etc/istio/inject
              readOnly: true
          livenessProbe:
            exec:
              command:
                - cat
                - /health
            failureThreshold: 5
            initialDelaySeconds: 4
            periodSeconds: 10
          readinessProbe:
            exec:
              command:
                - cat
                - /health
            failureThreshold: 5
            initialDelaySeconds: 4
            periodSeconds: 10
          resources:
            requests:
              cpu: 10m
            seccompProfile:
              type: RuntimeDefault
      volumes:
        - name: config-volume
          configMap:
            name: istio
        - name: certs
          emptyDir: {}
        - name: inject-config
          configMap:
            name: cpx-istio-sidecar-injector
            items:
              - key: config
                path: config
              - key: values
                path: values
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: cpx-sidecar-injector
  namespace: default
  labels:
    app: cpx-sidecar-injector
    chart: citrix-cpx-istio-sidecar-injector-1.12.0
    release: release-name
webhooks:
  - name: sidecar-injector.istio.io
    admissionReviewVersions:
      - v1
    clientConfig:
      service:
        name: cpx-sidecar-injector
        namespace: default
        path: /inject
      caBundle: ""
    rules:
      - operations:
          - CREATE
        apiGroups:
          - ""
        apiVersions:
          - v1
        resources:
          - pods
        scope: '*'
    sideEffects: None
    failurePolicy: Fail
    namespaceSelector:
      matchLabels:
        cpx-injection: enabled
